v0.059 : Fix h4 text-overflow + create  Ellipsis mixin

--- a/css/sass/layouts/_pages-restaurant.scss
+++ b/css/sass/layouts/_pages-restaurant.scss
@@ -72,17 +72,16 @@
             justify-content: space-between;
         }
         .Restaurant__Menu__Name{
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
+            @include Ellipsis;
             & h4{
                 font-size: 2.1vh;
                 margin: 0.5vh 0;
+                @include Ellipsis;
             }
             & span{
                 font-size: 1.8vh;
                 font-weight: 300;
-
+                @include Ellipsis;
             }
         }
         .Restaurant__Menu__Price{
